Prevent line break in play button

--- a/src/components/PlayButton/PlayButton.scss
+++ b/src/components/PlayButton/PlayButton.scss
@@ -9,6 +9,7 @@
   font-size: 0.8rem;
   height: 2rem;
   margin: 0;
+  white-space: nowrap;
 }
 
 .play-button__icon {
